fix: reaction svg button group z-index (#2967)

--- a/app/assets/stylesheets/components/ReactionSchemeGraphic.scss
+++ b/app/assets/stylesheets/components/ReactionSchemeGraphic.scss
@@ -18,7 +18,7 @@
     height: 100%;
     min-height: 300px;
     background-color: rgba(255, 255, 255, 0.95);
-    z-index: 9999;
+    z-index: 10;
     border-radius: 4px;
     display: flex;
     justify-content: center;
@@ -34,7 +34,7 @@
     top: 0;
     right: 0;
     display: flex;
-    z-index: 10000;
+    z-index: 11;
   }
 
   &__material-name {
